<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@color/light_blue"
    tools:context="edu.quinnipiac.ser210.Assignment3.MainFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="77dp"
        android:layout_marginBottom="568dp"
        android:gravity="center_horizontal"
        android:text="@string/Welcome"
        android:textColor="@color/black"
        android:textSize="48sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="165dp"
        android:text="@string/Description"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="320dp"
        android:text="@string/LeagueIDLabel"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextMultiLine1"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="329dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:hint="ex. 12 is NBA"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="454dp"
        android:text="@string/SeasonLabel"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextTextMultiLine2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="470dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:hint="ex. 2019-2020"/>

    <Button
        android:id="@+id/generateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginStart="161dp"
        android:layout_marginBottom="58dp"
        android:text="@string/Generate"/>
</FrameLayout>